# mmio-rs

./: Cargo.toml  README.md
docs/: architecture.md  usage.md
examples/: atomic_operations.rs  basic_register.rs  peripheral_driver.rs  register_block.rs
src/: access.rs  atomic.rs  block.rs  irq_guard.rs  lib.rs  register.rs
tests/: register_tests.rs
